--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,6 +90,7 @@
         <link rel="stylesheet" href="/static/css/main.css">
     
         <!-- Global site tag (gtag.js) - Google Analytics -->
+        {% if jekyll.environment == "production" %}
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127486975-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -98,6 +99,7 @@
 
             gtag('config', '{{ site.google_analytics }}');
         </script>
+        {% endif %}
 
     </head>
 
