Agregado seo tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
             gtag('config', '{{ site.google_analytics }}');
         </script>
         {% endif %}
-
+        {% seo %}
     </head>
 
     <body>
