--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
         {% endif %}
         {% if page.header-img %}
         <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
+        {% else %}
+        <meta name="twitter:image:src" content="{{ site.url }}/static/img/avatar.png">
         {% endif %}
 
         <!-- Font awesome icons -->
