--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,13 @@ layout: default
 </span>
 {% if page.categories %}
 <span class="categories">
-    &raquo; {% for category in page.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+    &raquo; {% for category in page.categories %}
+        {% if forloop.last == false %}
+            <a href="/category/{{ category }}"><div class="label label-primary mr-2">{{ category }}</div></a>
+        {% else %}
+            <a href="/category/{{ category }}"><div class="label label-primary">{{ category }}</div></a>
+        {% endif %}
+    {% endfor %}
 </span>
 {% endif %}
 
