--- a/_layouts/posts_by_category.html
+++ b/_layouts/posts_by_category.html
@@ -12,9 +12,9 @@ layout: default
         {% capture category_slug %}{{ category | first }}{% endcapture %}
         {% for c_slug in category_slug %}
             {% if c_slug == page.categories %}
-                <button class="btn btn-sm btn-default active">{{ c_slug }}</button>
+                <div class="label label-success">{{ c_slug }}</div>
             {% else %}
-                <a href="/category/{{ c_slug }}" class="btn btn-sm btn-default">{{ c_slug }}</a>
+                <a href="/category/{{ c_slug }}"><div class="label label-primary">{{ c_slug }}</div></a>
             {% endif %}
         {% endfor %}
     {% endfor %}
