--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,38 +20,44 @@ hr {
 /**
  * Font and link declarations
  */
-span.time, span.categories {
-    color: #ADADAD;
+span.time {
+    color: #931a59;
     margin-bottom: 5px;
     font-size: 11px;
+}
+
+span.categories {
+    margin-bottom: 5px;
+    font-size: 14px;
 }
 
 h1 {
     font-weight: normal;
     color: #696969;
     margin-bottom: 10px;
-    font-size: 25px;
 }
 
 h2 {
     font-weight: normal;
     margin-bottom: 5px;
     color: #666666;
+    border-bottom: 1px solid #eaecef;
 }
         
 h3 {
     font-weight: normal;
     margin-bottom: 5px;
     color: #666666;
+    border-bottom: 1px solid #eaecef;
 }
 
 a, a:link, a:active {
     text-decoration: none;
-    color: #8C8C8C;
+    color:#1a5993;
 }
 
 a:hover {
-    color: #B3B3B3;
+    color: #59931a;
     text-decoration: underline;
 }
 
@@ -102,7 +108,7 @@ footer {
     margin-top: 10px;
     margin-bottom: 3em;
     padding-top: 10px;
-    color: #C2C2C2;
+    color: black;
     font-size: 11px;
     bottom: 0;
     padding-bottom: 10px;
@@ -136,6 +142,12 @@ div.right .post ul {
 /**
  * Left column aka nav bar formatting
  */
+
+.author-name {
+    margin: 5px 0px 0px 0px;
+    font-size: 26px;
+}
+ 
 div.col-sm-3 {
         margin-top: 100px;
         font-size: 11px;
@@ -149,13 +161,13 @@ div.col-sm-3 strong {
 }
 
 div.col-sm-3 div#about {
-        margin-top: 10px;
-		color: #8C8C8C;
+        margin-top: 0px;
+		color: black;
 }
 
 div.col-sm-3 img#about {
     -webkit-border-radius: 150px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -216,4 +228,16 @@ div.col-sm-3 img#about {
     div.col-sm-3 {
         margin-top: 30px;
     }
+}
+
+/* Utilidades */
+.mr-2 {
+    margin-right: 2px;
+}
+
+.twitter-share-button {
+    padding: 2px 10px 0px 10px;
+    border-radius: 4px;
+    color: white;
+    background-color: #00aced;
 }
