--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -8,7 +8,7 @@
      ><span class="twitter-share-button"><i class="fa fa-twitter mr-2"></i><strong style="font-size: 11px; vertical-align: bottom;">Tweet</strong></span></a>
 
     <!-- Facebook -->
-    <div class="fb-share-button" data-href="{{ site.url }}{{ page.url }}" style="position: relative; top: -3.5px; left: 3px;" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
+    <!-- <div class="fb-share-button" data-href="{{ site.url }}{{ page.url }}" style="position: relative; top: -3.5px; left: 3px;" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div> -->
 </div>
-<div id="fb-root"></div>
-<script async defer src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.2"></script>
+<!-- <div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.2"></script> -->
