--- a/static/css/main.css
+++ b/static/css/main.css
@@ -162,7 +162,8 @@ div.col-sm-3 strong {
 
 div.col-sm-3 div#about {
         margin-top: 0px;
-		color: black;
+        color: black;
+        line-height: 1.6em;
 }
 
 div.col-sm-3 img#about {
@@ -217,11 +218,15 @@ div.col-sm-3 img#about {
 }
 .post-content img, .content img {max-width: 100%}
 
+.fixed-condition {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* Responsive Conditional */
 @media (min-width: 1024px) {
     .fixed-condition {
         position: fixed;
-        max-width: 255px;
+        max-width: 180px;
     }
 }
 @media (max-width: 768px) {
