--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,6 +138,7 @@
         <script src="/static/js/super-search.js"></script>
         <script src="/static/js/thickbox-compressed.js"></script>
         <script src="/static/js/projects.js"></script>
+        <script src="https://gumroad.com/js/gumroad.js"></script>
     </body>
     
 </html>
