--- a/static/css/main.css
+++ b/static/css/main.css
@@ -240,6 +240,10 @@ div.col-sm-3 img#about {
     margin-right: 2px;
 }
 
+.mr-4 {
+    margin-right: 4px;
+}
+
 .twitter-share-button {
     padding: 2px 10px 0px 10px;
     border-radius: 4px;
