--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -53,9 +53,10 @@ span.tags:last-child{ margin-right: 0; }
     width: 230px;
     height: 200px;
     display: block;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    border: 1px solid black;
 }
 /** Project Tag Filters **/
 .tag-group{
