feat: Increase site font size, replace icons with emojis and improve menu links.

--- a/_includes/project_tags.html
+++ b/_includes/project_tags.html
@@ -1,6 +1,6 @@
 {% if site.enableTags ==  true %}
 	<div id="tag-filter" class="tag-group">
-		<span class="tag-filter tag-cloud all label label-primary label-success">Todo</span>
+		<span class="tag-filter tag-cloud all label label-primary label-success">todo</span>
         {% assign tagarray = site.tagarray %}
         {% for project in site.data.projects %}
             {% for tag in project.tags %}
