feat: Improve github info: icons, start.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,8 +121,8 @@
 			  {% if site.github %}
 		      - <a href="{{ site.github }}">{{ site.github }}</a> - powered by jekyll.
 			  {% endif %}
-			<div class="btn-github" style="float:right;">
-			    <iframe src="https://ghbtns.com/github-btn.html?user=luisreinoso&repo=luisreinoso.github.io&type=star&count=true" frameborder="0" scrolling="0" width="85" height="20px"></iframe>
+            <div class="btn-github" style="float:right;">
+                <iframe src="https://ghbtns.com/github-btn.html?user=LuisReinoso&type=follow" frameborder="0" scrolling="0" width="170" height="20" title="GitHub"></iframe>
 			</div>
          	    </footer>
 		</div><!-- end /.col-sm-8 -->
