--- a/static/css/main.css
+++ b/static/css/main.css
@@ -147,25 +147,27 @@ div.right .post ul {
     font-size: 26px;
 }
  
-div.col-sm-3 {
+div.col-sm-2 {
         margin-top: 100px;
         font-size: 11px;
         color: #666;
+        display: flex;
+        justify-content: center;
 }
 
-div.col-sm-3 strong {
+div.col-sm-2 strong {
         font-size: 16px;
         color: #4A4A4A;
         font-weight: normal;
 }
 
-div.col-sm-3 div#about {
+div.col-sm-2 div#about {
         margin-top: 0px;
         color: black;
         line-height: 1.6em;
 }
 
-div.col-sm-3 img#about {
+div.col-sm-2 img#about {
     -webkit-border-radius: 150px;
     margin-bottom: 0px;
     margin-left: auto;
@@ -225,11 +227,11 @@ div.col-sm-3 img#about {
 @media (min-width: 1024px) {
     .fixed-condition {
         position: fixed;
-        max-width: 180px;
+        padding-left: 50px;
     }
 }
 @media (max-width: 768px) {
-    div.col-sm-3 {
+    div.col-sm-2 {
         margin-top: 30px;
     }
 }
@@ -267,4 +269,45 @@ div.col-sm-3 img#about {
 .post-item {
     display: flex;
     flex-direction: row;
+}
+
+.auxiliar-sidebar {
+    display: flex;
+    justify-content: flex-start !important;
+}
+
+.table-of-contents {
+    position: fixed;
+    margin-top: 100px;
+    padding-right: 20px;
+}
+
+.table-of-contents__title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.table-of-contents__list {
+    font-size: 14px;
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    max-width: 740px;
+}
+
+.main-container {
+    display: flex;   
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
