--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
         {% else %}
         <meta name="twitter:description" content="{{ site.description }}">
         {% endif %}
-        {% if page.header-img %}
-        <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
+        {% if page.image %}
+        <meta name="twitter:image:src" content="{{ site.url }}/{{ page.image }}">
         {% else %}
         <meta name="twitter:image:src" content="{{ site.url }}/static/img/avatar.png">
         {% endif %}
