--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,9 +44,9 @@
         <meta name="twitter:description" content="{{ site.description }}">
         {% endif %}
         {% if page.image %}
-        <meta name="twitter:image:src" content="{{ site.url }}/{{ page.image }}">
+        <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
         {% else %}
-        <meta name="twitter:image:src" content="{{ site.url }}/static/img/avatar.png">
+        <meta name="twitter:image" content="{{ site.url }}/static/img/avatar.png">
         {% endif %}
 
         <!-- Font awesome icons -->
