--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           {% endfor %}
         {% endif %}
 
-        <meta name="twitter:card" content="summary">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@{{ site.share.twitter_username }}">
         <meta name="twitter:creator" content="@{{ site.share.twitter_username }}">
         {% if page.title %}
