--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,175 +1,225 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% seo %}
-        <link rel="shortcut icon" href="/static/img/favicon.ico" />
-        <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.author }}{% endif %}</title>
-        <meta name="keywords" content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}" />
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
-        <meta content="{{ site.share.fb_appid }}" property="fb:app_id">
-        <meta content="{{ site.url }}/about/" property="article:author">
-        {% if page.image %}
-        <meta content="{{ site.url }}/static/img/posts/{{ page.image }}" property="og:image">
-        {% else %}
-        <meta content="{{ site.url }}/static/img/logo-high-resolution.png" property="og:image">
-        {% endif %}
-        {% if page.categories %}
-          {% for category in page.categories limit:1 %}
-        <meta content="{{ category }}" property="article:section">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% seo %}
+    <link rel="shortcut icon" href="/static/img/favicon.ico" />
+    <title>
+      {% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{
+      site.author }}{% endif %}
+    </title>
+    <meta
+      name="keywords"
+      content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}"
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="RSS"
+      href="/feed.xml"
+    />
+    <meta content="{{ site.share.fb_appid }}" property="fb:app_id" />
+    <meta content="{{ site.url }}/about/" property="article:author" />
+    {% if page.image %}
+    <meta
+      content="{{ site.url }}/static/img/posts/{{ page.image }}"
+      property="og:image"
+    />
+    {% else %}
+    <meta
+      content="{{ site.url }}/static/img/logo-high-resolution.png"
+      property="og:image"
+    />
+    {% endif %} {% if page.categories %} {% for category in page.categories
+    limit:1 %}
+    <meta content="{{ category }}" property="article:section" />
+    {% endfor %} {% endif %} {% if page.tags %} {% for tag in page.tags %}
+    <meta content="{{ tag }}" property="article:tag" />
+    {% endfor %} {% endif %}
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@{{ site.share.twitter_username }}" />
+    <meta name="twitter:creator" content="@{{ site.share.twitter_username }}" />
+    {% if page.title %}
+    <meta name="twitter:title" content="{{ page.title }}" />
+    {% else %}
+    <meta name="twitter:title" content="{{ site.title }}" />
+    {% endif %} {% if page.url %}
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
+    {% endif %} {% if page.description %}
+    <meta name="twitter:description" content="{{ page.description }}" />
+    {% else %}
+    <meta name="twitter:description" content="{{ site.description }}" />
+    {% endif %} {% if page.image %}
+    <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}" />
+    {% else %} {% endif %}
+
+    <!-- Font awesome icons -->
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
+      crossorigin="anonymous"
+    />
+
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/static/css/syntax.css" />
+
+    <!-- Bootstrap core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Fonts -->
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/static/css/super-search.css" />
+    <link rel="stylesheet" href="/static/css/thickbox.css" />
+    <link rel="stylesheet" href="/static/css/projects.css" />
+    <link rel="stylesheet" href="/static/css/main.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    {% if jekyll.environment == "production" %}
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-82JC86EH05"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', '{{ site.google_analytics }}');
+    </script>
+    {% endif %}
+  </head>
+
+  <body>
+    <nav class="navbar navbar-default main-navbar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/"> </a>
+          <ul class="nav navbar-nav navbar-links">
+            {% for i in site.urls %}
+            <li><a href="{{ i.url }}">{{ i.text }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="main-container">
+      <div class="info-sidebar col-sm-2">
+        <div class="fixed-condition">
+          <h1 class="author-name">{{ site.author }}</h1>
+          {% if site.about %}
+          <div id="about">{{ site.about }}</div>
+          {% endif %}
+          <div class="social">
+            <ul>
+              {% for link in site.social %}
+              <li>
+                <a href="{{ link.link }}" target="_blank"
+                  ><i class="fa fa-lg {{ link.icon }}"></i
+                ></a>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <div class="search" id="js-search">
+            <input
+              type="text"
+              placeholder="(sitemap)~$ type to search"
+              class="search__input form-control"
+              id="js-search__input"
+            />
+            <ul class="search__results" id="js-search__results"></ul>
+          </div>
+
+          <div class="language-selector">
+            {{ site.active_lang }} <span>&#x25BC;</span>
+            <div class="language-options">
+              {% for lang in site.languages %}
+              <a
+                {%
+                static_href
+                %}href="{% if lang == site.default_lang %}{{site.baseurl}}{{page.url}}{% else %}{{site.baseurl}}/{{ lang }}{{page.url}}{% endif %}"
+                {%
+                endstatic_href
+                %}
+                >{{ lang }}</a
+              >
+              {% endfor %}
+            </div>
+          </div>
+          <br />
+
+          <strong>Navegación</strong><br />
+          {% for i in site.urls %}
+          <div class="site-url-container">
+            :small_blue_diamond:
+            <a class="site-url" href="{{ i.url }}">{{ i.text }}</a><br />
+          </div>
           {% endfor %}
-        {% endif %}
-        {% if page.tags %}
-          {% for tag in page.tags %}
-        <meta content="{{ tag }}" property="article:tag">
-          {% endfor %}
-        {% endif %}
+        </div>
+        <!-- end /.fixed-condition -->
+      </div>
 
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@{{ site.share.twitter_username }}">
-        <meta name="twitter:creator" content="@{{ site.share.twitter_username }}">
-        {% if page.title %}
-        <meta name="twitter:title" content="{{ page.title }}">
-        {% else %}
-        <meta name="twitter:title" content="{{ site.title }}">
-        {% endif %}
-        {% if page.url %}
-        <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-        {% endif %}
-        {% if page.description %}
-        <meta name="twitter:description" content="{{ page.description }}">
-        {% else %}
-        <meta name="twitter:description" content="{{ site.description }}">
-        {% endif %}
-        {% if page.image %}
-        <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
-        {% else %}
-        {% endif %}
-
-        <!-- Font awesome icons -->
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/static/css/syntax.css">
-
-        <!-- Bootstrap core CSS -->
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Fonts -->
-        <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic,300,400italic,700&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/static/css/super-search.css">
-        <link rel="stylesheet" href="/static/css/thickbox.css">
-        <link rel="stylesheet" href="/static/css/projects.css">
-        <link rel="stylesheet" href="/static/css/main.css">
-    
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        {% if jekyll.environment == "production" %}
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127486975-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', '{{ site.google_analytics }}');
-        </script>
-        {% endif %}
-    </head>
-
-    <body>
-      <nav class="navbar navbar-default main-navbar">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/">
-            </a>
-            <ul class="nav navbar-nav navbar-links">
-              {% for i in site.urls %}
-                <li><a href="{{ i.url }}">{{ i.text }}</a></li>
+      <div class="main col-sm-8 col-offset-1">
+        <div class="main-content">
+          {{ content }}
+          <footer>
+            &copy; {{ site.author }} {% if site.github %} -
+            <a href="{{ site.github }}">{{ site.github }}</a> - powered by
+            jekyll. {% endif %}
+            <div class="btn-github" style="float: right">
+              <iframe
+                src="https://ghbtns.com/github-btn.html?user=LuisReinoso&type=follow"
+                frameborder="0"
+                scrolling="0"
+                width="170"
+                height="20"
+                title="GitHub"
+              ></iframe>
+            </div>
+          </footer>
+        </div>
+      </div>
+      <!-- end /.col-sm-8 -->
+      <div class="auxiliar-sidebar col-sm-2">
+        {% if page.toc %}
+        <div class="table-of-contents">
+          <div class="table-of-contents__title">
+            {% if page.language == 'es' %} Tabla de contenidos {% else %} Table
+            of Contents {% endif %}
+          </div>
+          <div class="table-of-contents__list">
+            <ul>
+              {% for i in page.urls %}
+              <li>
+                <a class="site-url" href="{{ i.url }}">{{ i.text }}</a>
+              </li>
               {% endfor %}
             </ul>
           </div>
         </div>
-      </nav>
-      <div class="main-container">
-		<div class="info-sidebar col-sm-2">
-		    <div class="fixed-condition">
-			<h1 class="author-name">{{ site.author }}</h1>
-		{% if site.about %}
-			<div id="about">
-		    {{ site.about }}
-			</div>
-		{% endif %}
-			<div class="social">
-			    <ul>
-			{% for link in site.social %}
-				<li><a href="{{ link.link }}" target="_blank"><i class="fa fa-lg {{ link.icon }}"></i></a></li>
-			{% endfor %}
-			    </ul>
-			</div>
-
-			<div class="search" id="js-search">
-			    <input type="text" placeholder="(sitemap)~$ type to search" class="search__input form-control" id="js-search__input">
-			    <ul class="search__results" id="js-search__results"></ul>
-			</div>
-
-            <strong>Navegación</strong><br />
-            {% for i in site.urls %}
-                <div class="site-url-container">
-                    :small_blue_diamond: <a class="site-url" href="{{ i.url }}">{{ i.text }}</a><br />
-                </div>
-            {% endfor %}
-		    </div><!-- end /.fixed-condition -->
-		</div>
-		
-		<div class="main col-sm-8 col-offset-1">
-      <div class="main-content">
-        {{ content }}
-        <footer>
-          &copy; {{ site.author }}
-          {% if site.github %}
-            - <a href="{{ site.github }}">{{ site.github }}</a> - powered by jekyll.
-          {% endif %}
-          <div class="btn-github" style="float:right;">
-              <iframe src="https://ghbtns.com/github-btn.html?user=LuisReinoso&type=follow" frameborder="0" scrolling="0" width="170" height="20" title="GitHub"></iframe>
-          </div>
-        </footer>
-      </div>
-		</div><!-- end /.col-sm-8 -->
-    <div class="auxiliar-sidebar col-sm-2">
-      {% if page.toc %}
-        <div class="table-of-contents">
-          <div class="table-of-contents__title">
-            {% if page.language == 'es' %} Tabla de contenidos {% else %} Table of
-            Contents {% endif %}
-          </div>
-          <div class="table-of-contents__list">
-            <ul>
-            {% for i in page.urls %}
-              <li>
-                <a class="site-url" href="{{ i.url }}">{{ i.text }}</a>
-              </li>
-            {% endfor %}
-            </ul>          
-          </div>
-        </div>
         {% endif %}
-	    </div>
-	    
-        </div><!-- end /.container -->
+      </div>
+    </div>
+    <!-- end /.container -->
 
-        <!-- bootstrap core javascript
+    <!-- bootstrap core javascript
              ================================================== -->
-        <!-- placed at the end of the document so the pages load faster -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script src="/static/js/bootstrap.min.js"></script>
-        <script src="/static/js/super-search.js"></script>
-        <script src="/static/js/thickbox-compressed.js"></script>
-        <script src="/static/js/projects.js"></script>
-        <script src="https://gumroad.com/js/gumroad.js"></script>
-    </body>
-    
+    <!-- placed at the end of the document so the pages load faster -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/super-search.js"></script>
+    <script src="/static/js/thickbox-compressed.js"></script>
+    <script src="/static/js/projects.js"></script>
+    <script src="https://gumroad.com/js/gumroad.js"></script>
+  </body>
 </html>
