--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,22 +78,13 @@
     <link rel="stylesheet" href="/static/css/projects.css" />
     <link rel="stylesheet" href="/static/css/main.css" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     {% if jekyll.environment == "production" %}
-    <!-- Google tag (gtag.js) -->
+    <!-- Umami -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-82JC86EH05"
+      src="https://satisfied-tortoise.pikapod.net/script.js"
+      data-website-id="2983c79c-de19-45e8-bb50-18d5ccbf3184"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', '{{ site.google_analytics }}');
-    </script>
     {% endif %}
   </head>
 
@@ -138,7 +129,7 @@
             />
             <ul class="search__results" id="js-search__results"></ul>
           </div>
-          
+
           <br />
 
           <strong>Navegación</strong><br />
